@@ -1,3 +1,11 @@
+2012-08-27  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	PR gdb/14494.
+	* dwarf2read.c (dwarf2_locate_sections): Move variable aflag here.
+	Move the SEC_HAS_CONTENTS check here - for any NAMES use.
+	(dwarf2_locate_sections) <eh_frame>: Move the variable and check from
+	here.
+
 2012-08-22  Keith Seitz  <keiths@redhat.com>
 
 	* defs.h: Include build-gnulib/config.h
